[package]
name = "kyc-service"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
warp = "0.3"
actix-web = "4"          # Framework Web
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
diesel = { version = "2", features = ["postgres", "r2d2", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
jsonwebtoken = "9"       # Para JWT
log = "0.4"
env_logger = "0.10"
